--- a/src/main/resources/templates/monitoring/list.plaintext.mustache
+++ b/src/main/resources/templates/monitoring/list.plaintext.mustache
@@ -1,3 +1,3 @@
 {{#monitorings}}
-{{serviceStatePlainTextLabel}}   {{lastSeen}}    {{url}}
+{{id}}  {{serviceStatePlainTextLabel}}   {{lastSeen}}    {{url}}
 {{/monitorings}}
