--- a/src/main/resources/templates/monitoring/list.html.mustache
+++ b/src/main/resources/templates/monitoring/list.html.mustache
@@ -5,6 +5,27 @@
     <title>Monitorings</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+    <script>
+    $(document).ready(function(){
+            $('.delete-monitoring').click(function () {
+                var id = $(this).val();
+
+                $.ajax({
+                    type: "DELETE",
+                    url: id,
+                    success: function (data) {
+                        console.log(data);
+                    },
+                    error: function (data) {
+                        console.log('Error:', data);
+                    }
+                });
+            });
+    });
+    </script>
     <style>
                         tr.up { background-color: #C4FEAC; }
                         tr.down { background-color: #FEACAC; }
@@ -16,6 +37,7 @@
 <table class="table table-hover table-sm">
     <thead>
     <tr>
+        <th scope="col" class="id">Actions</th>
         <th scope="col" class="id">ID</th>
         <th scope="col" class="state">State</th>
         <th scope="col" class="lastSeen">last Seen</th>
@@ -26,6 +48,7 @@
 
     {{#monitorings}}
     <tr class="{{serviceStateCssClass}} {{serviceStateCssTrClass}}">
+        <td class="actions"><button class="btn btn-outline-danger btn-sm btn-delete delete-monitoring" value="{{id}}">❌️</button></td>
         <td class="id">{{id}}</td>
         <td class="state {{serviceStateCssId}}">{{serviceStateHtmlLabel}}</td>
         <td class="lastSeen">{{lastSeen}}</td>
