--- a/src/main/resources/templates/monitoring/list.html.mustache
+++ b/src/main/resources/templates/monitoring/list.html.mustache
@@ -77,7 +77,7 @@
             <td class="id">{{id}}</td>
             <td class="state {{serviceStateCssId}}">{{serviceStateHtmlLabel}}</td>
             <td class="lastSeen">{{lastSeen}}</td>
-            <td class="url">{{name}}</td>
+            <td class="name">{{name}}</td>
             <td class="url"><a href="{{url}}">{{url}}</a></td>
         </tr>
     {{/monitorings}}
