Condense table rows

--- a/src/main/resources/templates/monitoring/list.html.mustache
+++ b/src/main/resources/templates/monitoring/list.html.mustache
@@ -48,11 +48,13 @@
 
     </script>
     <style>
-                        tr.up { background-color: #C4FEAC; }
-                        tr.down { background-color: #FEACAC; }
-                        tr.unknown { background-color: #EAEAEA; }
+        tr.up { background-color: #C4FEAC; }
+        tr.down { background-color: #FEACAC; }
+        tr.unknown { background-color: #EAEAEA; }
 
-
+        .btn-sm {
+            padding: 0rem .2rem;
+        }
     </style>
 </head>
 <body>
