Condense table a bit more

--- a/src/main/resources/templates/monitoring/list.html.mustache
+++ b/src/main/resources/templates/monitoring/list.html.mustache
@@ -56,6 +56,10 @@
         .btn-sm {
             padding: 0rem .2rem;
         }
+
+        .table-sm td, .table-sm th {
+            padding: 0rem;
+        }
     </style>
 </head>
 <body>
