Add ICMP monitoring

--- a/src/main/resources/templates/monitoring/list.html.mustache
+++ b/src/main/resources/templates/monitoring/list.html.mustache
@@ -108,7 +108,8 @@
                 <label for="url">URL</label>
                 <input type="text" class="form-control" id="url" placeholder="tcp://sqlserver.mydomain.example:3389">
                 <small id="urlHelp" class="form-text text-muted">URL to the service to be monitored. Must return a HTTP
-                    code less than 400 to be shown as "up". Be sure you prefixed it with http://, https:// or tcp://. In
+                    code less than 400 to be shown as "up". Be sure you prefixed it with http://, https://, tcp:// or
+                    icmp://. In
                     case of tcp://, you have also to specify a port.
                 </small>
             </div>
