Smaller and centered card for adding monitorings

--- a/src/main/resources/views/list.html.hbs
+++ b/src/main/resources/views/list.html.hbs
@@ -101,7 +101,7 @@
     </tbody>
 </table>
 
-<div class="card">
+<div class="card w-50 mx-auto">
     <div class="card-body">
         <h5 class="card-title">Add monitoring</h5>
         <h6 class="card-subtitle mb-2 text-muted">Want to monitor your own service? Great, here you go:</h6>
@@ -122,7 +122,7 @@
                     case of tcp://, you have also to specify a port.
                 </small>
             </div>
-            <button type="submit" class="btn btn-outline-primary add-monitoring">Add</button>
+            <button type="submit" class="btn btn-outline-primary add-monitoring">Add monitoring</button>
         </form>
     </div>
 </div>
