--- a/src/main/resources/views/list.html.hbs
+++ b/src/main/resources/views/list.html.hbs
@@ -56,10 +56,6 @@
     });
     </script>
     <style>
-        tr.up { background-color: #C4FEAC; }
-        tr.down { background-color: #FEACAC; }
-        tr.unknown { background-color: #EAEAEA; }
-
         .small-buttons {
             padding: 0rem .2rem !important;
             margin-bottom: .0rem !important;
@@ -85,7 +81,7 @@
     <tbody>
 
     {{#each monitorings}}
-        <tr class="{{this.serviceStateCssClass}} {{this.serviceStateCssTrClass}}">
+        <tr class="{{this.serviceStateCssTrClass}}">
             <td class="actions">
                 <button class="btn btn-outline-danger btn-sm btn-delete small-buttons delete-monitoring"
                         value="{{this.id}}">❌️
